--- a/08/FinalProject.ipynb
+++ b/08/FinalProject.ipynb
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 562,
    "id": "1a947d0b",
    "metadata": {},
    "outputs": [
@@ -913,7 +913,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Percentage of tests with frame start mismatch in OOK: 64.97%\n"
+      "Percentage of tests with frame start mismatch in OOK: 65.02%\n"
      ]
     }
    ],
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 563,
    "id": "a0e0f447",
    "metadata": {},
    "outputs": [
@@ -965,7 +965,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Percentage of tests with frame start mismatch in QPSK: 6.12%\n"
+      "Percentage of tests with frame start mismatch in QPSK: 5.96%\n"
      ]
     }
    ],
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 565,
    "id": "3e59c490",
    "metadata": {},
    "outputs": [
@@ -1020,6 +1020,11 @@
     "        return crosscorr\n",
     "\n",
     "count = 0\n",
+    "\n",
+    "frequency_offset = np.random.uniform(-0.01*fs,0.01*fs)\n",
+    "Ts = 1/fs\n",
+    "t =  np.arange(0,len(baseband)*Ts,41593)\n",
+    "nonideal_term = np.exp(1j*2*np.pi*frequency_offset*t)\n",
     "\n",
     "for i in range(10000):    \n",
     "    N = 10\n",
@@ -1048,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f63bbb56",
+   "id": "3a02c677",
    "metadata": {},
    "outputs": [],
    "source": []
